logeval fixes